Changelog
=========

1.2.8 - Unreleased
------------------

- Handle possibility of content not having a "review_state" in the content
  history viewlet.
  [dunlapm]


1.2.7 - 2011-02-28
------------------

- Implemented null contents of alt tag for icons
  for improved accessibility.
  Added css hook for convenience of theme developers.
  Refs http://www.w3.org/TR/2010/NOTE-WCAG20-TECHS-20101014/F39
  Fixes https://dev.plone.org/plone/ticket/10387
  [msmith64]
    
- Fixed @@plone_context_state.view_template_id handling of content that does
  not implement IBrowserDefault (Products.CMFDynamicViewFTI). It was possible
  for this code to raise Unauthorized even when the user had permission to
  access the default view of the current context.
  Backported from 2.0.4.
  [mj]

- 'Compare' link is not available
  if content type is not registered in portal_diff.
  Fixes http://dev.plone.org/plone/ticket/11107.
  Backported from 2.0.3.
  [thomasdesvenain]

1.2.6 - 2010-03-01
------------------

- Make icon descriptions' lookup of portal_type title less brittle for
  missing portal_types (fall back to the portal_type id).
  [davisagli]

- Do not let the homelink in the personal bar viewlet point to the
  author page but to the personalize_form (or dashboard).
  Fixes http://dev.plone.org/plone/ticket/8707
  [maurits]

- XHTML minor fixes to be also XHTML Strict compliant.
  http://dev.plone.org/plone/ticket/4379
  [keul]

- Fixed time_only argument of comments viewlet. Fixes #9467
  [naro]

- Fixed document_byline so it will display copyrights
  when Allow anyone to view 'about' information is turned off
  This fix http://dev.plone.org/plone/ticket/9344
  [amleczko]

1.2.5 - 2009-08-01
------------------

- In the history viewlet, moved again the arrows inside a span. This is
  needed to allow CSS style.
  [vincentfretin]

1.2.4 - 2009-07-04
------------------

- In the history viewlet, internationalized the Compare link and replaced